--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+
+
 <html lang="en">
 
 <head>
@@ -10,6 +12,6 @@
 <body>
     <h1>Welcome!</h1>
     <p>To a very simple static html page for testing Amplify hosting</p>
-</body>
+    <p>Guid: da4a9319-dad6-4aad-8d15-5ead890f6d2f</p></body>
 
 </html>
